Remove deprecated plugin configurations from pom.xml